<resources>
    <string name="app_name" translatable="false">AppCandyBug</string>
    <string name="title_activity_index" translatable="false">IndexActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="invalid_name" translatable="false">Pleace Enter valid Name</string>
    <string name="invalid_password" translatable="false">Pleace Enter password</string>
    <string name="invalid_phone" translatable="false">Pleace enter valid your phone</string>
    <string name="invalid_email" translatable="false">Enter valid email</string>
    <string name="invalid_passwordlength" translatable="false">Enter three digit password</string>
    <string name="invalid_confirm" translatable="false">Password does not match</string>
    <string name="invalid_displayname" translatable="false">Pleace enter your name</string>
    <string name="title_activity_navigationheader" translatable="false">navigationheader</string>
    <string name="invalid_username" translatable="false">Pleace enter username</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="order">Order</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="detail_product">Product details</string>
    <string name="shopping_cart">Shopping Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_product">Product name</string>
    <string name="cancel_order">Cancel order</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="notice_error_success">Something went wrong. Please, check your connection</string>
    <string name="notice_error_blank_edit_text">Please, fill all this text box</string>
    <string name="notice_error_have_order">You already have your order. Thank you</string>
    <string name="notice_error_null">This is our mistake. You should report to our and we will fix soon. Thank you</string>
    <string name="descripte_product">Product decription</string>
    <string name="empty_cart">Your cart now is empty</string>
    <string name="buy">Buy</string>
    <string name="continue_buying">Buy some more</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>