<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".activity.CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/shopping_cart"
        android:background="#5AE377"/>
    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewThongBao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:gravity="center"
                android:text="@string/empty_cart"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/listViewCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="30sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewGiaTien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Giá trị"
                    android:textColor="@color/black"
                    android:textSize="30sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/buttonThanhToan"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/buy"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/buttonTiepTucMua"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/continue_buying"
        android:textSize="24sp"/>
</LinearLayout>