<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailProduct">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarChiTietSanPham"
        app:titleTextColor="@color/white"
        android:background="#107688"
        app:title="@string/detail_product"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageViewChiTietSanPham"
            android:layout_width="150dp"
            android:layout_height="175dp"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewTenChiTietSanPham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/name_product"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textViewGiaChiTietSanPham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giá của sản phẩm"
                android:textColor="#FF00"
                android:textSize="20sp"/>

            <NumberPicker
                android:id="@+id/numberPickerSoLuongChiTietSanPham"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <Button
                android:id="@+id/buttonThemGioHangChiTietSanPham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart"
                android:textColor="#AFAF1D"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/descripte_product"
            android:textSize="30sp"
            android:textColor="#00FF7B"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewMotaChiTietSanPham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="20sp" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>